@@ -27,9 +27,10 @@ NON-TECH
    *. Fighter - Weapons Training (or Karate Training for Monks) -- non-kill way to gain xp, makes mobs slightly harder, 1 level up max.
    *. Fighter -- AUTOGUARD can start a little "Guarding" prog for, say, 10 rl minutes.
    *. Classes with insufficient unique skills:
-        *. Assassin      : +6
-                         : Two-Dagger Fighting (no negatives on two handed fighting), Cut Throat (crit, bleeding), Double Strike (2x attacks with daggers),
-                         : Dagger Defense, Dagger Mastery, Deep Cut (causes injury)
+        *. Assassin      : +3
+                         : Double Strike (2x attacks with daggers),
+                         : Dagger Mastery, 
+                         : Deep Cut (causes injury)
         *. Ranger        : +9
         *. Ranger ideas  : Camoflauge, Repel Vermin, Wind Wall (protect/arrow), Detect Snares/Pits, Delay Poison, Sense Poison, Calm Animals, Speak with Animals, Snare
         *. Paladin       : +6
