@@ -89,6 +89,7 @@ public class Assassin extends Thief
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),6,"Skill_Dodge",false);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),6,"Thief_Pick",false);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),6,"Thief_DaggerDefense",true);
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),7,"Thief_MarkInvisibility",true);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),7,"Specialization_Natural",false);
@@ -121,6 +122,7 @@ public class Assassin extends Thief
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),16,"Fighter_DualParry",false);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),16,"Skill_AttackHalf",true);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),16,"Thief_CutThroat",false);
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),17,"Fighter_CriticalShot",true);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),17,"Specialization_Hammer",false);
@@ -131,6 +133,7 @@ public class Assassin extends Thief
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),19,"Thief_HighMarks",true,CMParms.parseSemicolons("Thief_Mark",true));
 		CMLib.ableMapper().addCharAbilityMapping(ID(),19,"Specialization_Polearm",false);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),19,"Skill_TwoDaggerFighting",false,CMParms.parseSemicolons("Skill_TwoWeaponFighting",true));
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),20,"Thief_Trap",false);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),20,"Skill_Stability",false);
