@@ -300,6 +300,16 @@ The thief drops numerous small metal spikes on the ground around him or her. \
 While the thief will be able to avoid them, anyone entering, leaving, \
 advancing, or retreating from the room will be damaged by them.
 
+CUTTHROAT=CUT_THROAT
+CT=CUT_THROAT
+CUT_THROAT=<ABILITY>\
+Usage    : CUTTHROAT [TARGET NAME] \n\r\
+Example  : cutthroat orc\n\r\
+Shorts   : BS\n\r\
+If the thief is hidden, or otherwise invisible to the target, and is wielding a dagger, \
+this ability will allow him or her to cut the targets throat, dealing \
+a big burst of damage, and starting the bleeding effect.
+
 DAZZLINGCALTROPS=THIEF_DAZZLINGCALTROPS
 THIEF_DAZZLINGCALTROPS=<ABILITY>\
 Usage    : DAZZLING CALTROPS\n\r\
@@ -537,6 +547,13 @@ Usage    : GRAFFITI [MESSAGE]\n\r\
 Example  : graffiti kilroy was here\n\r\
 This skill allows the thief to put graffiti on walls and on city streets. Others \
 must READ the graffiti to see it, as it will not be obvious.
+
+DAGGER_DEFENSE=<ABILITY>\
+Example  : \n\r\
+This skill grants an extra attempt to parry when wielding a dagger. \
+Parrying is the ability to cancel an armed attack by an opponent using \
+your own weapon.  The character with this skill will parry the attacks of \
+his or her armed opponents whenever possible.
 
 DETRAP=REMOVE_TRAPS
 REMOVE_TRAPS=<ABILITY>\
@@ -2136,6 +2153,14 @@ Example  : \n\r\
 Gives the fighter an enormous boost to attack rating when using a \
 ranged or thrown weapon in ranged combat.
 
+TWO_DAGGER_FIGHTING=<ABILITY>\
+Example  : \n\r\
+While in combat, this skill allows the player to attack with a second dagger \
+in the hold position, assuming the player is in range for the second weapon. \
+This skill also allows more frequent attacks when wielding two daggers. \
+If the fighter also has two weapon fighting, then they will find they no longer \
+suffer quite as much attack and damage penalty when using two daggers.
+
 TWO_WEAPON_COMBAT=TWO_WEAPON_FIGHTING
 DUAL_WIELDING=TWO_WEAPON_FIGHTING
 DUALWIELD=TWO_WEAPON_FIGHTING
@@ -2147,7 +2172,7 @@ TWO_WEAPON_FIGHTING=<ABILITY>\
 Example  : \n\r\
 While in combat, this skill allows the fighter to attack with a second weapon \
 in the hold position, assuming the fighter is in range for the second weapon. \
-The fighter suffers a 20% attack and 5% damage penalty for using 2 weapons.
+The fighter suffers a small attack and a tiny damage penalty for using 2 weapons.
 
 MTRAP=LAY_MINOR_TRAPS
 MINORTRAP=LAY_MINOR_TRAPS
