@@ -20,6 +20,7 @@
   16. New Oracle spells: Sense Faithful, Speak with Dead
   17. New Purist spells: Judgement, Piety Curse, Sanctimonious
   18. New Shaman spells: Refuge
+  19. New Assassin skills: Two Dagger Fighting, Cut Throat, Dagger Defense
    *. Beyond new spells for some, all mage specialists have had their spell lists tinkered with to make them a bit better
 # Build 5.8.3 Release 10/27/2014
    *. Database Schema Updated for CMCHAR.CMDESC and CMCHAR.CMCHID.  See the Installation Guide about running DBUpgrade.
